2048-game/1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: namespace
  name: deployment-2048
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: app-2048
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-2048
    spec:
      containers:
      - image: public.ecr.aws/l6m2t8p7/docker-2048:latest
        imagePullPolicy: Always
        name: app-2048
        ports:
        - containerPort: 80
